# linguistics_with_cpp

./: CMakeLists.txt  README.md
ngramdictionary/: CMakeLists.txt  NGramDictionaryManager.cpp  NGramDictionaryManager.hpp  readme.txt  stopwords.txt
src/: main.cpp
src/ngramdictionary/: NGramDictionaryManager.cpp  NGramDictionaryManager.hpp  main.cpp  stopwords.txt
src/searcher/: SearcherManager.cpp  SearcherManager.hpp
